[project]
name = "charlotte"
version = "0.1.0"
description = "A cutscene encoder tool for a certain popular anime game."
authors = [{ name = "lunarmint", email = "me@chocomint.dev" }]
requires-python = ">=3.14"
readme = "README.md"
maintainers = [{ name = "Mint" }]
dependencies = [
    "orjson>=3.11.9",
    "pyinstaller>=6.21.0",
    "typer>=0.26.8",
    "urllib3>=2.7.0",
    "vapoursynth>=77",
    "vapoursynth-adaptivegrain>=0.5.0",
    "vapoursynth-akarin>=1.4.1",
    "vapoursynth-bestsource>=18.0",
    "vapoursynth-dctfilter>=3.2",
    "vapoursynth-deblock>=9.0",
    "vapoursynth-resize2>=0.4.3",
    "vapoursynth-vszip>=19.0.0",
    "vapoursynth-zsmooth>=0.18.0",
    "vs-placebo>=2.0.2",
    "vsjetpack>=2.1.0",
    "vsnoise>=1.2.1",
    "vspreview>=0.20.1",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "ruff>=0.15.20",
]

[[tool.uv.index]]
name = "vs-wheels"
url = "https://jaded-encoding-thaumaturgy.github.io/vs-wheels/simple"

[tool.uv]
package = false
default-groups = [
    "dev",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez (enforce timezone-aware datetimes)
    "E", # pycodestyle rules
    "F", # pyflakes rules
    "I", # isort rules
    "PERF", # (perflint) prevent performance anti-patterns
    "PLE", # pylint errors
    "PLW", # pylint rules
    "PIE", # flake8-pie (misc. lints for cleaner code)
    "RUF", # ruff-specific rules (catch common mistakes)
    "N", # pep8-naming
    "Q", # flake8-quotes
    "RSE", # flake8-raise (simplify raise statements)
    "RET", # flake8-return (simplify return statements)
    "SIM", # flake8-simplify (suggest simpler code)
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "T20", # (disallow print statements) keep debugging statements out of the codebase
    "W", # pycodestyle warnings
    "UP", # (pyupgrade) auto-upgrade syntax to newer versions of Python
]

extend-safe-fixes = [
    "TCH", # move import from and to TYPE_CHECKING blocks
]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"
